feat: Updated OpenAPI spec (#190)
