# src/libs/DeepInfra/Generated/DeepInfra.Models.OpenRouterPricing.g.cs
@@ -1,0 +1,58 @@
+
+#nullable enable
+
+namespace DeepInfra
+{
+    /// <summary>
+    /// 
+    /// </summary>
+    public sealed partial class OpenRouterPricing
+    {
+        /// <summary>
+        /// Pricing per 1 token for input
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("prompt")]
+        [global::System.Text.Json.Serialization.JsonRequired]
+        public required string Prompt { get; set; }
+
+        /// <summary>
+        /// Pricing per 1 token for output
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonPropertyName("completion")]
+        [global::System.Text.Json.Serialization.JsonRequired]
+        public required string Completion { get; set; }
+
+        /// <summary>
+        /// Additional properties that are not explicitly defined in the schema
+        /// </summary>
+        [global::System.Text.Json.Serialization.JsonExtensionData]
+        public global::System.Collections.Generic.IDictionary<string, object> AdditionalProperties { get; set; } = new global::System.Collections.Generic.Dictionary<string, object>();
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="OpenRouterPricing" /> class.
+        /// </summary>
+        /// <param name="prompt">
+        /// Pricing per 1 token for input
+        /// </param>
+        /// <param name="completion">
+        /// Pricing per 1 token for output
+        /// </param>
+#if NET7_0_OR_GREATER
+        [global::System.Diagnostics.CodeAnalysis.SetsRequiredMembers]
+#endif
+        public OpenRouterPricing(
+            string prompt,
+            string completion)
+        {
+            this.Prompt = prompt ?? throw new global::System.ArgumentNullException(nameof(prompt));
+            this.Completion = completion ?? throw new global::System.ArgumentNullException(nameof(completion));
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="OpenRouterPricing" /> class.
+        /// </summary>
+        public OpenRouterPricing()
+        {
+        }
+    }
+}
